using UnityEngine;

namespace Blue.Entity
{
    public abstract class BaseEntityView : MonoBehaviour
    {
    }
}
